--- a/app/assets/scss/_layout.scss
+++ b/app/assets/scss/_layout.scss
@@ -85,7 +85,6 @@ body{
 	//email and password input
 	#loginInput{
 		margin-top: 105px;
-		background-color: red;
 		width:600px;
 		height: 50px;
 		@media screen and (min-width: 280px) and (max-width: 800px){
@@ -109,6 +108,9 @@ body{
   		height: 35px;
   		width:225px;
   		font-size: 30px;
+  		border-radius: 10px;
+  		background-color: rgba(175, 147, 16, 0.3);
+  		color:white;
   		@media screen and (min-width: 280px) and (max-width: 800px){
 			height: 30px;
 			font-size: 20px;
@@ -124,6 +126,9 @@ body{
   	height: 35px;
   	width:350px;
   	font-size: 30px;
+  	border-radius: 10px;
+  	background-color: rgba(175, 147, 16, 0.3);
+  	color:white;
   	@media screen and (min-width: 280px) and (max-width: 800px){
 			height: 30px;
 			font-size: 20px;
@@ -136,14 +141,14 @@ body{
 	}
 
 	#joinBtn{
-		//background: transparent;
+		background: transparent;
     	border: none;
     	font-size:0;
     	float:left;
 	}
 
 	#loginBtn{
-		//background: transparent;
+		background: transparent;
     	border: none;
     	font-size:0;
     	float:right;
@@ -185,7 +190,6 @@ body{
 		height:60px;
 		float:left;
 		text-align:center;
-		background-color:orange;
 		/*@media screen and (max-width: 425px) {
 			width:50;
 		}
