more landing ui changes

--- a/app/assets/scss/_app.scss
+++ b/app/assets/scss/_app.scss
@@ -27,7 +27,7 @@ body{
   margin-right: auto;
   border: 3px solid $brown;
   border-radius: 10px;
-  background-color: $brown;
+  background-color: rgba(28, 97, 10, 0.9);
 }
 
 #signIn {
