Modify register page log in link

--- a/app/assets/templates/register.hbs
+++ b/app/assets/templates/register.hbs
@@ -1,4 +1,4 @@
-<p class="centeredDescription col_4">Already registered? You can <a href="/login">log in here.</a></p>
+<p class="centeredDescription col_4">Already registered? You can <a href="/">log in here.</a></p>
 <p class="flash">{{message}}</p>
 
 <div class="formBox medium-12 column">
