update look and feel of register page after merging

--- a/app/assets/templates/register.hbs
+++ b/app/assets/templates/register.hbs
@@ -15,11 +15,11 @@
 		<label for="name">Display name</label><br>
 		<input class="shortInput" name="displayName" id="displayName" type="text"><br>
 
-		<label for="email">Email</label><br>
-		<input class="shortInput" name="email" id="email" type="text"><br>
+		<label for="emailRegiter">Email</label><br>
+		<input class="shortInput" name="email" id="emailRegister" type="text"><br>
 
-		<label for="password">Password</label><br>
-		<input name="password" class="shortInput" id="password" type="text"><br>
+		<label for="passwordRegister">Password</label><br>
+		<input name="password" class="shortInput" id="passwordRegister" type="text"><br>
 
 		<label for="confirmPassword">Confirm password</label><br>
 		<input name="confirmPassword" class="shortInput" id="confirmPassword" type="text"><br>
