--- a/app/assets/scss/_app.scss
+++ b/app/assets/scss/_app.scss
@@ -18,7 +18,7 @@ body{
 #loginBox {
   margin-left: auto;
   margin-right: auto;
-  border: 3px solid $brown;
+  border: 3px solid $darkGreen;
   border-radius: 10px;
   background-color: rgba(28, 97, 10, 0.9);
 }
