--- a/app/assets/scss/_register.scss
+++ b/app/assets/scss/_register.scss
@@ -1,5 +1,7 @@
+@import "colors.scss";
+
 .formBox {
-  background-color: #5BAB33;
+  background-color: $lightGreen;
   border: 2px solid black;
   border-left: none;
   border-right: none;
@@ -20,7 +22,7 @@
 
 .buttonRegister {
   box-shadow: 5px 5px 10px gray;
-  background-color: #C4D46A;
+  background-color: $avocado;
   border-radius: .3em;
   border: none;
   font-family: 'Shadows Into Light', cursive;
