--- a/app/assets/templates/shindig.hbs
+++ b/app/assets/templates/shindig.hbs
@@ -2,9 +2,11 @@
   <div class="shindigDetail" id="dateDisplay">{{date}}, {{start_time}}-{{end_time}}</div>
   <!-- <p class="time"></p> -->
   <div class="shindigDetail" id="titleDisplay">{{title}}</div>
-  <div class="shindigDetail" id="ownerDisplay">{{owner}}</div>
   <div class="shindigDetail" id="locationDisplay">{{location}}</div>
-  <div class="shindigDetail" id="descriptionDisplay">{{description}}</div>
+  <div class="ownerDescriptionContainer">
+    <div class="shindigDetail" id="ownerDisplay">Planner: {{owner}}</div>
+    <div class="shindigDetail" id="descriptionDisplay">Deets: {{description}}</div>
+  </div>
 </div>
 <div class="icons">
 
