--- a/app/assets/scss/_general.scss
+++ b/app/assets/scss/_general.scss
@@ -16,6 +16,10 @@ General styles
   text-shadow: black 0.1em 0.1em 0.2em;
 }
 
+.helvetica {
+  font-family: helvetica;
+}
+
 
 /*-------------------
 Shindig List View
