--- a/app/assets/templates/shindig.hbs
+++ b/app/assets/templates/shindig.hbs
@@ -4,8 +4,8 @@
   <div class="shindigDetail" id="titleDisplay">{{title}}</div>
   <div class="shindigDetail" id="locationDisplay">{{location}}</div>
   <div class="ownerDescriptionContainer">
-    <div class="shindigDetail" id="ownerDisplay">Planner: {{owner}}</div>
-    <div class="shindigDetail" id="descriptionDisplay">Deets: {{description}}</div>
+    <div class="shindigDetail" id="ownerDisplay"><span class="helvetica">planner:</span> {{owner}}</div>
+    <div class="shindigDetail" id="descriptionDisplay"><span class="helvetica">deets:</span> {{description}}</div>
   </div>
 </div>
 <div class="icons">
