it works omg omg can new see all shindigsafter adding new shindig hooray

--- a/app/assets/templates/createShindig.hbs
+++ b/app/assets/templates/createShindig.hbs
@@ -1,5 +1,5 @@
 <div class="formBox medium-12 column">
-	<form id="signupForm" action="/saveshindig" method="post">
+	<form id="signupFormCreate" action="">
 
 	<div class="formTexts medium-4 column">
 		<label for="titleCreate">Title</label><br>
@@ -20,7 +20,7 @@
 
 	<div class="medium-4 column">
 	<label for="descriptionCreate">Details</label>
-		<textarea form="signupForm" class="shortInput" name="descriptionCreate" id="descriptionCreate" type="textarea" rows="4" cols="40"></textarea>
+		<textarea form="signupFormCreate" class="shortInput" name="descriptionCreate" id="descriptionCreate" type="textarea" rows="4" cols="40"></textarea>
 	</div>
 
 	<div class="createInterests medium-8 column">
@@ -36,7 +36,7 @@
 
 
 	<div class="medium-8 column">
-		<button class="buttonCreate submit_button" type="submit">Save Shindig</button>
+		<button class="buttonCreate submit_button">Save Shindig</button>
 	</div>
 
 	</form>
