fix alignment of shindig details and clean up code

--- a/app/assets/templates/createShindig.hbs
+++ b/app/assets/templates/createShindig.hbs
@@ -19,7 +19,7 @@
 	</div>
 
 	<div class="medium-4 column">
-	<label for="descriptionCreate">Details</label>
+	<label for="descriptionCreate">Details</label><br>
 		<textarea form="signupFormCreate" class="shortInput" name="descriptionCreate" id="descriptionCreate" type="textarea" rows="4" cols="40"></textarea>
 	</div>
 
