Fix small leaf hover images

--- a/app/assets/scss/_app.scss
+++ b/app/assets/scss/_app.scss
@@ -30,13 +30,11 @@ body{
   text-shadow: black 0.1em 0.1em 0.2em;
 }
 
-#joinImg:hover{
-  background-image: url('../JoinHoverClick.png');
-}
+//#joinImg:hover{
+ // background-image: url('../JoinHoverClick.png');
+//}
 
-#loginImg:hover{
-  background-image: url('../GoHoverClick.png');
-}
+
 
 #loginEmail {
 
